Fixing message area on user homepage to appear at the top of the page on mobile devices.

--- a/static/main.css
+++ b/static/main.css
@@ -181,7 +181,9 @@ h3.section_header {
   border: 5px solid #FCFAF7;
   background-color: #FCFAF7;
   border-radius: 3px;
-  max-width: 300px;
+  max-width: 400px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 
